Add InternalsVisibleTo for unit testing
Added an InternalsVisibleTo item group in Dointo.AiRecruiter.Application.csproj to allow internal members of the Dointo.AiRecruiter.Application assembly to be visible to the Dointo.AiRecruiter.Application.Tests assembly. This change facilitates unit testing by providing access to internal members.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Application/Dointo.AiRecruiter.Application.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Application/Dointo.AiRecruiter.Application.csproj
@@ -15,4 +15,10 @@
 		<ProjectReference Include="..\Dointo.AiRecruiter.Dtos\Dointo.AiRecruiter.Dtos.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="Dointo.AiRecruiter.Application.Tests">
+			<Assembly>Dointo.AiRecruiter.Application</Assembly>
+		</InternalsVisibleTo>
+	</ItemGroup>
+
 </Project>
