Add project references and MongoDB configuration
Updated `Dointo.AiRecruiter.RestApi.csproj` to include references to `AiInfrastructure`, `Application`, and `DbInfrastructure` projects. Added `using` statements and service registrations for `Application` and `DbInfrastructure` in `Program.cs`, with MongoDB settings for `DbInfrastructure`. Modified `appsettings.Development.json` and `appsettings.json` to include MongoDB connection settings.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/Dointo.AiRecruiter.RestApi.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/Dointo.AiRecruiter.RestApi.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dointo.AiRecruiter.AiInfrastructure\Dointo.AiRecruiter.AiInfrastructure.csproj" />
+    <ProjectReference Include="..\Dointo.AiRecruiter.Application\Dointo.AiRecruiter.Application.csproj" />
+    <ProjectReference Include="..\Dointo.AiRecruiter.DbInfrastructure\Dointo.AiRecruiter.DbInfrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
