--- a/.github/workflows/validate-server-code.yml
+++ b/.github/workflows/validate-server-code.yml
@@ -1,6 +1,6 @@
 name: Validate Server Code
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -28,7 +28,7 @@ jobs:
         run: dotnet test ${{ env.CODE_PATH }}**.[Tt]ests/*.csproj --configuration Release --collect "Code coverage"
 
       - name: Publish Code Coverage
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: code-coverage
           path: ${{ runner.temp }}/**/*.coverage
