Fix CODE_PATH in validate-server-code.yml to use a relative path

--- a/.github/workflows/validate-server-code.yml
+++ b/.github/workflows/validate-server-code.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: windows-latest
 
     env:
-      CODE_PATH: "./src/AiRecruiterCodeBase/"
+      CODE_PATH: "src/AiRecruiterCodeBase/"
 
     steps:
       - name: Checkout code
