--- a/.github/workflows/validate-server-code.yml
+++ b/.github/workflows/validate-server-code.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: List files for debugging
+        run: dir ${{ env.CODE_PATH }}
+
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
         with:
