--- a/src/AiRecruiterCodeBase/dointo.airecruiter.web/tsconfig.json
+++ b/src/AiRecruiterCodeBase/dointo.airecruiter.web/tsconfig.json
@@ -21,7 +21,7 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "global.d.ts"],
   "references": [{ "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }]
 }
