Add MongoDB support and enhance DbContext functionality
- Integrated MongoDB by modifying `AiRecruiterDbContext` to use `IMongoDatabase` and overriding `SaveChangesAsync` for entity tracking.
- Added `Humanizer.Core` for string pluralization in `DbContextExtensions`.
- Updated `JobPost` entity mapping to use `BsonIdValueGenerator` for ObjectId generation.
- Introduced `BsonIdValueGenerator` class for MongoDB ObjectId creation.
- Enhanced `JobPostsService` with null checks for better validation.
- Refactored `JobPostRepository` to align with MongoDB changes.
- Updated dependency injection in `Setup` for MongoDB configuration.
- Removed unused imports and improved code readability and maintainability.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Application/Dointo.AiRecruiter.Application.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Application/Dointo.AiRecruiter.Application.csproj
@@ -21,4 +21,8 @@
 		</InternalsVisibleTo>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+	</ItemGroup>
+
 </Project>
