--- a/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
+++ b/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query-devtools": "^5.59.20",
     "@tanstack/react-table": "^8.20.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@yaireo/tagify": "^4.35.0",
     "animate.css": "4.1.1",
     "apexcharts": "3.51.0",
     "axios": "1.7.2",
@@ -57,6 +58,7 @@
     "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-dom": "^18.3.0",
     "@types/sass-loader": "8.0.8",
+    "@types/yaireo__tagify": "^4.27.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
