--- a/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
+++ b/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
@@ -45,6 +45,7 @@
     "react-select": "^5.8.0",
     "react-topbar-progress-indicator": "4.1.1",
     "socicon": "3.0.5",
+    "toastr": "^2.1.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -58,6 +59,7 @@
     "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-dom": "^18.3.0",
     "@types/sass-loader": "8.0.8",
+    "@types/toastr": "^2.1.43",
     "@types/yaireo__tagify": "^4.27.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
