Refactor CORS policy and add dynamic client URLs
Replaced named CORS policy with a default policy in `Program.cs`
that dynamically retrieves allowed origins from the new
`ClientUrls` configuration section. Updated `appsettings.json`
and `appsettings.Development.json` to include `ClientUrls`.
Removed hardcoded frontend origin and replaced it with a loop
to support multiple origins. Adjusted middleware to use the
default CORS policy.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
@@ -8,5 +8,6 @@
 	"MongoDb": {
 		"ConnectionString": "mongodb://localhost:27017",
 		"DatabaseName": "AiRecruiterDb"
-	}
+	},
+	"ClientUrls": [ "http://localhost:62835" ]
 }
