--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/Dointo.AiRecruiter.RestApi.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/Dointo.AiRecruiter.RestApi.csproj
@@ -1,20 +1,30 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Dointo.AiRecruiter.AiInfrastructure\Dointo.AiRecruiter.AiInfrastructure.csproj" />
-    <ProjectReference Include="..\Dointo.AiRecruiter.Application\Dointo.AiRecruiter.Application.csproj" />
-    <ProjectReference Include="..\Dointo.AiRecruiter.DbInfrastructure\Dointo.AiRecruiter.DbInfrastructure.csproj" />
-  </ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
+
+		<PackageReference Include="MongoFramework" Version="0.29.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Dointo.AiRecruiter.AiInfrastructure\Dointo.AiRecruiter.AiInfrastructure.csproj" />
+		<ProjectReference Include="..\Dointo.AiRecruiter.Application\Dointo.AiRecruiter.Application.csproj" />
+		<ProjectReference Include="..\Dointo.AiRecruiter.DbInfrastructure\Dointo.AiRecruiter.DbInfrastructure.csproj" />
+	</ItemGroup>
 
 </Project>
