--- a/.github/workflows/main-api-deployment.yml
+++ b/.github/workflows/main-api-deployment.yml
@@ -25,11 +25,11 @@ jobs:
           dotnet-version: "9.x"
 
       - name: Build with dotnet
-        working-directory: env.working-directory
+        working-directory: ${{env.working-directory}}
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        working-directory: env.working-directory
+        working-directory: ${{env.working-directory}}
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
