--- a/src/AiRecruiterCodeBase/dointo.airecruiter.web/.gitignore
+++ b/src/AiRecruiterCodeBase/dointo.airecruiter.web/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Vite/React specific
+dist/
+dist-ssr/
+*.local
+.vite/
+.env
+.env.*
+src/AiRecruiterCodeBase/dointo.airecruiter.web/dist/
