feat: update TypeScript CI configuration with additional compiler options

--- a/src/AiRecruiterCodeBase/dointo.airecruiter.web/tsconfig.ci.json
+++ b/src/AiRecruiterCodeBase/dointo.airecruiter.web/tsconfig.ci.json
@@ -3,6 +3,12 @@
   "compilerOptions": {
     "declaration": false,
     "declarationMap": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   }
 }
