feat: update FTP deployment workflow and enhance TypeScript configuration

--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -34,8 +34,7 @@ jobs:
       - name: Build App
         run: |
           cd ./src/AiRecruiterCodeBase/dointo.airecruiter.web
-          cp tsconfig.ci.json tsconfig.json
-          npm run build
+          VITE_TSCONFIG=tsconfig.ci.json npm run build
 
       - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
