--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build App
         run: |
           cd ./src/AiRecruiterCodeBase/dointo.airecruiter.web
-          VITE_APP_API_BASE_URL=$${{vars.API_BASE_URL}} npm run build:ci
+          VITE_APP_API_BASE_URL=${{vars.API_BASE_URL}} npm run build:ci
 
       - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
