--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Application/Dointo.AiRecruiter.Application.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Application/Dointo.AiRecruiter.Application.csproj
@@ -23,6 +23,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
 	</ItemGroup>
 
 </Project>
