feat: integrate OpenAI and DeepSeek providers for skill extraction

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.AiInfrastructure/Dointo.AiRecruiter.AiInfrastructure.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.AiInfrastructure/Dointo.AiRecruiter.AiInfrastructure.csproj
@@ -12,4 +12,13 @@
 		</InternalsVisibleTo>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+	  <PackageReference Include="OpenAI" Version="2.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Dointo.AiRecruiter.Application\Dointo.AiRecruiter.Application.csproj" />
+	</ItemGroup>
+
 </Project>
