Refactor AI infra with JSON schema & OpenAI SDK support
Introduced `JsonUtils` for centralized JSON schema generation
using `Newtonsoft.Json.Schema.Generation`. Updated `JobsAgent`
to leverage this utility, replacing hardcoded JSON strings.

Enhanced `AiProvider` and its implementations (`DeepSeekProvider`,
`OpenAiProvider`) to support dynamic output formats via the
`GetCompletionAsync` method. Integrated OpenAI SDK for improved
response handling with JSON schema support.

Added `Newtonsoft.Json.Schema` dependency and updated
`appsettings.Development.json` with OpenAI configuration.
Refactored `Program.cs` to register AI services and align
Swagger setup with the new infrastructure.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
@@ -9,5 +9,9 @@
 		"ConnectionString": "mongodb://localhost:27017",
 		"DatabaseName": "AiRecruiterDb"
 	},
-	"ClientUrls": [ "http://localhost:62835" ]
+	"ClientUrls": [ "http://localhost:62835" ],
+	"OpenAi": {
+		"ApiKey": "",
+		"ApiUrl": "https://api.openai.com/v1/chat/completions"
+	}
 }
