Refactor skill extraction and update dependencies
Refactored `JobsAgent` to use `GPT_4O_MINI` and introduced a new `SkillsCompletionDto` for improved deserialization. Updated `JobPostsService` to delegate skill extraction to `_jobsAgent.ExtractSkillsAsync` and removed fallback logic. Replaced `JsonSerializer.Deserialize` with `Get<T>` in `Setup.cs` for better configuration handling.

Updated dependencies in `Dointo.AiRecruiter.AiInfrastructure.csproj` and added `UserSecretsId` to `Dointo.AiRecruiter.RestApi.csproj`. Adjusted `appsettings` files for consistent `ApiBaseUrl` configuration. These changes enhance maintainability, extensibility, and functionality.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/Dointo.AiRecruiter.RestApi.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/Dointo.AiRecruiter.RestApi.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>77034f6f-a73e-4e97-bfa1-25ec3d027af1</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
