--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
@@ -12,6 +12,6 @@
 	"ClientUrls": [ "http://localhost:62835" ],
 	"OpenAi": {
 		"ApiKey": "",
-		"ApiUrl": "https://api.openai.com/v1/chat/completions"
+		"ApiBaseUrl": "https://api.openai.com/v1/chat/completions"
 	}
 }
