--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.AiInfrastructure/Dointo.AiRecruiter.AiInfrastructure.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.AiInfrastructure/Dointo.AiRecruiter.AiInfrastructure.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
 	  <PackageReference Include="Newtonsoft.Json.Schema" Version="4.0.1" />
 	  <PackageReference Include="OpenAI" Version="2.1.0" />
