--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.json
@@ -13,6 +13,6 @@
 	"ClientUrls": [ "" ],
 	"OpenAi": {
 		"ApiKey": "",
-		"ApiUrl": "https://api.openai.com/v1/chat/completions"
+		"ApiBaseUrl": "https://api.openai.com/v1/chat/completions"
 	}
 }
