Auto complete skills | Sr162 (#20)
* complete the story 166 please review this

* Add Skill entity, resolver, and related service updates

Introduced a new `Skill` entity and its corresponding `SkillDto`
for managing skills. Added `SkillDtoResolver` for mapping
between `Skill` and `SkillDto`. Updated `JobPostsService` to
include skill-related functionality, including a new method
`GetAllSkills` and refactored `ExtractSkillsFromDescriptionAsync`.

Modified `AiRecruiterDbContext` to include a `DbSet<Skill>` and
configured the `Skill` entity. Updated `ReadOnlyRepository` to
filter out deleted entities. Adjusted dependency injection to
register `SkillDtoResolver`. Extended `IJobPostRepository` with
a `GetAllAsync` method for active job posts.

* new-push

* feat: integrate OpenAI and DeepSeek providers for skill extraction

* refactor: change ExtractSkillsFromDescriptionAsync to return Task instead of async Task

* Refactor skill extraction and improve provider handling

Refactored `JobsAgent` to enhance skill extraction logic:
- Replaced `GetCompletionAsync` with `GetProvider` for better AI provider management.
- Added structured `context` and `prompt` for skill extraction.
- Used JSON serialization/deserialization for output validation.

Enhanced `AiProviderFactory`:
- Updated `AddAiProvider` to always refresh configurations.
- Refactored `GetProvider` to throw `ProviderNotFoundException` for missing providers.
- Simplified provider creation and caching logic.

Introduced `ProviderNotFoundException` for clearer error handling.

Improved robustness in AI provider management and skill extraction.

* openai implementation

* Refactor AI infra with JSON schema & OpenAI SDK support

Introduced `JsonUtils` for centralized JSON schema generation
using `Newtonsoft.Json.Schema.Generation`. Updated `JobsAgent`
to leverage this utility, replacing hardcoded JSON strings.

Enhanced `AiProvider` and its implementations (`DeepSeekProvider`,
`OpenAiProvider`) to support dynamic outpu

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.AiInfrastructure/Dointo.AiRecruiter.AiInfrastructure.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.AiInfrastructure/Dointo.AiRecruiter.AiInfrastructure.csproj
@@ -12,4 +12,15 @@
 		</InternalsVisibleTo>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+	  <PackageReference Include="NJsonSchema" Version="11.3.2" />
+	  <PackageReference Include="OpenAI" Version="2.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Dointo.AiRecruiter.Application\Dointo.AiRecruiter.Application.csproj" />
+	</ItemGroup>
+
 </Project>
