--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Application/Dointo.AiRecruiter.Application.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Application/Dointo.AiRecruiter.Application.csproj
@@ -7,10 +7,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="AiAbstractions\" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<ProjectReference Include="..\Dointo.AiRecruiter.Domain\Dointo.AiRecruiter.Domain.csproj" />
 		<ProjectReference Include="..\Dointo.AiRecruiter.Dtos\Dointo.AiRecruiter.Dtos.csproj" />
 	</ItemGroup>
@@ -23,6 +19,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
 	</ItemGroup>
 
 </Project>
