--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.json
@@ -10,5 +10,9 @@
 		"ConnectionString": "mongodb://localhost:27017",
 		"DatabaseName": "AiRecruiterDb"
 	},
-	"ClientUrls": [ "" ]
+	"ClientUrls": [ "" ],
+	"OpenAi": {
+		"ApiKey": "",
+		"ApiBaseUrl": "https://api.openai.com/v1/chat/completions"
+	}
 }
