added interview list
Add candidate screening and job interview features

- Updated `IJobPostsService` to include `GetAllInterviews` method for retrieving interviews by job ID.
- Added new service registration for `CandidateListDtoResolver` in `Setup.cs`.
- Introduced `RECORD_UPDATED_FORMAT` in `Messages.cs` for update success messages.
- Enhanced `Candidate` class with `FullName`, `Score`, `Status`, and `LastInterviewed` properties.
- Updated `Interviewee` class to include `JobId` for better job association.
- Modified project references in `Dointo.AiRecruiter.Dtos.csproj`.
- Implemented CORS policy in `Program.cs` for React app support.
- Added new route for job interviews in `JobsIndex.tsx`.
- Updated `JobsList.tsx` with a new `JobScreening` component and improved job actions.
- Created `CandidateDtoResolver` for mapping `Interview` to `CandidateListDto`.
- Added `GetCandidatesByJobIdAsync` method in `CandidateService`.
- Introduced `CandidateValidator` for candidate property validation.
- Created `CandidateStatus` value object for structured candidate states.
- Added `FullName` class for better name representation.
- Defined `CandidateListDto` for candidate data transfer.
- Created `UpdateCandidateDto` for structured candidate updates.
- Implemented `CandidatesController` for managing candidates via API.
- Added `JobScreening.tsx` for candidate management interface.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Dtos/Dointo.AiRecruiter.Dtos.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.Dtos/Dointo.AiRecruiter.Dtos.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dointo.AiRecruiter.Domain\Dointo.AiRecruiter.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
