--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/Dointo.AiRecruiter.InterviewClient.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/Dointo.AiRecruiter.InterviewClient.csproj
@@ -61,9 +61,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.80" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="9.0.80" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Dointo.AiRecruiter.Dtos\Dointo.AiRecruiter.Dtos.csproj" />
     </ItemGroup>
 
 </Project>
