Add launch config, improve candidate summary, and refactor
- Updated `AiRecruiterCodeBase.slnLaunch` to include a new launch configuration "Launch Web + Interview" for multiple projects.
- Modified candidate summary generation in `CandidatesAgent.cs` to enhance clarity and professionalism, with a focus on strengths and a 200-word limit.
- Refactored `CreateCandidate.razor` to use an asynchronous form submission method and improved API response handling.
- Added project references in `Dointo.AiRecruiter.InterviewClient.csproj` for necessary dependencies.
- Adjusted HTTP client configuration in `MauiProgram.cs` and introduced a new `Constants` class for better organization.
- Created `ProcessingStateJsonConverter.cs` to handle deserialization of various processing states from server responses.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/Dointo.AiRecruiter.InterviewClient.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/Dointo.AiRecruiter.InterviewClient.csproj
@@ -68,6 +68,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Dointo.AiRecruiter.Core\Dointo.AiRecruiter.Core.csproj" />
       <ProjectReference Include="..\Dointo.AiRecruiter.Dtos\Dointo.AiRecruiter.Dtos.csproj" />
     </ItemGroup>
 
