Implement user authentication and management features
- Added `IUsersRepository` for user data access methods.
- Created `IAuthenticationService` for login and registration logic.
- Developed `AuthenticationController` to handle user requests.
- Introduced `User`, `LoginCredentialsDto`, and `RegisterUserDto` classes.
- Configured JWT authentication in `Program.cs` and updated settings.
- Implemented `TokenService` for generating JWT tokens.
- Updated `AiRecruiterDbContext` to manage user entities.
- Registered services in `Setup.cs` and added necessary package references.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
@@ -13,5 +13,9 @@
 	"OpenAi": {
 		"ApiKey": "",
 		"ApiBaseUrl": "https://api.openai.com/v1/chat/completions"
+	},
+	"Jwt": {
+		"Key": "This is a sample key and will be replaced on production. 12345678901234567890123456789012345678901234567890!@#$%^&*()",
+		"Issuer": "https://localhost:7072"
 	}
 }
