--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.json
@@ -14,5 +14,9 @@
 	"OpenAi": {
 		"ApiKey": "",
 		"ApiBaseUrl": "https://api.openai.com/v1/chat/completions"
+	},
+	"Jwt": {
+		"Key": "",
+		"Issuer": "Dointo.AiRecruiter"
 	}
 }
