Refactor and update project configuration and code
- Simplified `Window` instantiation in `App.xaml.cs`.
- Added `OnInitializedAsync` method in `Home.razor`.
- Changed `WindowsPackageType` to `MSIX` in project file and added app installer properties.
- Cleaned up `MainPage.xaml.cs` by removing unused directives and properties.
- Updated version number in `Package.appxmanifest` to `1.0.0.0`.
- Modified launch command in `launchSettings.json` to `MsixPackage`.
- Updated deep link format in `ConductJob.tsx` for URI compliance.

--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/Dointo.AiRecruiter.InterviewClient.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/Dointo.AiRecruiter.InterviewClient.csproj
@@ -32,7 +32,7 @@
         <ApplicationVersion>1</ApplicationVersion>
 
         <!-- To develop, package, and publish an app to the Microsoft Store, see: https://aka.ms/MauiTemplateUnpackaged -->
-        <WindowsPackageType>None</WindowsPackageType>
+        <WindowsPackageType>MSIX</WindowsPackageType>
 
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
@@ -41,6 +41,14 @@
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
         <DefaultLanguage>EN-US</DefaultLanguage>
+        <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
+        <AppxPackageSigningEnabled>False</AppxPackageSigningEnabled>
+        <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+        <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+        <AppxSymbolPackageEnabled>True</AppxSymbolPackageEnabled>
+        <GenerateTestArtifacts>True</GenerateTestArtifacts>
+        <AppInstallerUri>C:\Dointo\InterviewClient</AppInstallerUri>
+        <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
     </PropertyGroup>
 
     <ItemGroup>
