Update .gitignore and switch to Yarn for package management
- Added `MigrationBackup/` to .gitignore to exclude backup files.
- Removed `package-lock.json` and added `yarn.lock` to transition from npm to Yarn.

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /src/AiRecruiterCodeBase/dointo.airecruiter.web/package-lock.json
+/src/AiRecruiterCodeBase/dointo.airecruiter.web/yarn.lock
