--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Dependencies
         run: |
           cd ./src/AiRecruiterCodeBase/dointo.airecruiter.web
-          npm ci
+          npm install
 
       - name: Build App
         run: |
