--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.AiInfrastructure/Dointo.AiRecruiter.AiInfrastructure.csproj
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.AiInfrastructure/Dointo.AiRecruiter.AiInfrastructure.csproj
@@ -15,6 +15,7 @@
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
 	  <PackageReference Include="NJsonSchema" Version="11.3.2" />
 	  <PackageReference Include="OpenAI" Version="2.1.0" />
 	</ItemGroup>
