--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
@@ -17,5 +17,6 @@
 	"Jwt": {
 		"Key": "This is a sample key and will be replaced on production. 12345678901234567890123456789012345678901234567890!@#$%^&*()",
 		"Issuer": "https://localhost:7072"
-	}
+	},
+	"AiDetectorBaseUrl": "http://localhost:8400"
 }
