--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.RestApi/appsettings.Development.json
@@ -16,7 +16,7 @@
 	},
 	"Jwt": {
 		"Key": "This is a sample key and will be replaced on production. 12345678901234567890123456789012345678901234567890!@#$%^&*()",
-		"Issuer": "https://localhost:7072"
+		"Issuer": "https://localhost:7072/"
 	},
 	"AiDetectorBaseUrl": "http://localhost:8400"
 }
