--- a/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
+++ b/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
@@ -28,6 +28,7 @@
     "chart.js": "4.4.3",
     "clsx": "2.1.1",
     "formik": "2.4.6",
+    "jwt-decode": "^4.0.0",
     "line-awesome": "1.3.0",
     "nouislider": "15.8.1",
     "prism-react-renderer": "2.3.1",
