--- a/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
+++ b/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
@@ -48,6 +48,7 @@
     "react-select": "^5.8.0",
     "react-topbar-progress-indicator": "4.1.1",
     "socicon": "3.0.5",
+    "style-jsx": "^0.0.0",
     "toastr": "^2.1.4",
     "yup": "^1.4.0"
   },
