--- a/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
+++ b/src/AiRecruiterCodeBase/dointo.airecruiter.web/package.json
@@ -31,6 +31,7 @@
     "jwt-decode": "^4.0.0",
     "line-awesome": "1.3.0",
     "nouislider": "15.8.1",
+    "openai": "^5.9.0",
     "prism-react-renderer": "2.3.1",
     "prism-themes": "1.9.0",
     "prismjs": "1.29.0",
@@ -47,6 +48,7 @@
     "react-select": "^5.8.0",
     "react-topbar-progress-indicator": "4.1.1",
     "socicon": "3.0.5",
+    "style-jsx": "^0.0.0",
     "toastr": "^2.1.4",
     "yup": "^1.4.0"
   },
